--- a/client/admin/src/style/company-details.less
+++ b/client/admin/src/style/company-details.less
@@ -1,3 +1,8 @@
-.CompanyDetails{
-    
+.CompanyDetails {
+    &-title{
+        padding-bottom: 20px;
+    }
+}
+textarea {
+    font-family: monospace !important;
 }
