[User][Admin][Server] Routes added
User - chart saving, filtering, values
Admin - style
Server - routes for User and Admin

--- a/client/admin/src/style/company-details.less
+++ b/client/admin/src/style/company-details.less
@@ -2,6 +2,11 @@
     &-title{
         padding-bottom: 20px;
     }
+    &-buttonContainer{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
 }
 textarea {
     font-family: monospace !important;
