--- a/client/user/src/style/chart-component.less
+++ b/client/user/src/style/chart-component.less
@@ -2,24 +2,43 @@
     font: 12px sans-serif;
 }
 
-line, path, yAxis {
+line,
+path,
+.yAxis {
     shape-rendering: crispEdges;
     stroke: #696969;
     fill: none;
 }
 
-.xAxis{
-    display:none;
+.xAxis {
+    display: none;
 }
-
+circle {
+    &.extra {
+        stroke: #ff8000;
+        stroke-width: 3px;
+    }
+    &.junior {
+        stroke: #c70039;
+        stroke-width: 3px;
+    }
+    &.senior {
+        stroke: #a335ee;
+        stroke-width: 3px;
+    }
+    &.regular {
+        stroke: #0070dd;
+        stroke-width: 3px;
+    }
+}
 .from {
-    fill: #85bb65;
-    opacity: 0.8;
+    //fill: #85bb65;
+    fill: #dcdcdc;
 }
 
 .to {
-    fill: #3E741E;
-    opacity: 0.8;
+    //fill: #3e741e;
+    fill: #dcdcdc;
 }
 
 .currentValue {
@@ -43,11 +62,54 @@ line, path, yAxis {
     opacity: 0.2;
 }
 
-.link{
+.link {
     opacity: 0.8;
 }
 
-.updateChartData{
+.updateChartData {
     padding-top: 10px;
     padding-bottom: 10px;
+}
+.chartArea{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+    &-header{
+       align-self: flex-end;
+    }
+}
+.chartValue {
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+    padding: 4px;
+    border: 1px solid #ced4da;
+    border-radius: 3px;
+    &-salary {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-self: center;
+        
+        &-value{
+            height: 24px;
+        }
+        &-colName {
+            align-self: center;
+        }
+    }
+    &-role {
+        display: flex;
+        justify-content: space-between;
+        &-colName {
+        }
+    }
+    &-seniority {
+        display: flex;
+        justify-content: space-between;
+        text-transform: capitalize;
+        &-colName {
+
+        }
+    }
 }
